--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -108,3 +108,52 @@ input {
 		margin-top: 5px;
 	}
 }
+
+@media (max-width: 425px) {
+	.header h1 {
+		font-size: 20px;
+	}
+
+	main {
+		text-align: center;
+	}
+
+	.borderBox {
+		margin: 0;
+		width: auto;
+		text-align: left;
+		padding-top: 10px;
+	}
+
+	.borderBox h2 {
+		padding-bottom: 5px;
+		text-align: center;
+		font-size: 14pt;
+	}
+
+	textarea {
+		border: 2px dashed gainsboro;
+		margin: 0 0 5px 0;
+		text-align: center;
+		width: 100%;
+	}
+
+	textarea,
+	input {
+		font-size: 14px;
+	}
+
+	#buttonGetPassword {
+		width: 100%;
+		font-size: 14px;
+		margin-top: 5px;
+		padding: 5px;
+	}
+
+	#buttonClipboard {
+		width: 100%;
+		font-size: 14px;
+		margin-top: 5px;
+		padding: 5px;
+	}
+}
