--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -32,6 +32,15 @@ input {
 	font-size: 20px;
 }
 
+input {
+	border-radius: 28px;
+	cursor: pointer;
+	color: #ffffff;
+	font-size: 20px;
+	padding: 16px 31px;
+	text-decoration: none;
+}
+
 #buttons {
 	border-top: 2px solid gainsboro;
 	padding-top: 10px;
@@ -40,37 +49,17 @@ input {
 #buttonGetPassword {
 	float: left;
 	background-color: red;
-	border-radius: 28px;
 	border: 1px solid red;
-	display: inline-block;
-	cursor: pointer;
-	color: #ffffff;
-	font-size: 20px;
-	padding: 16px 31px;
-	text-decoration: none;
 }
 
 #buttonClipboard {
 	float: right;
 	background-color: #898989;
-	border-radius: 28px;
 	border: 1px solid #898989;
-	display: inline-block;
-	cursor: pointer;
-	color: #ffffff;
-	font-size: 20px;
-	padding: 16px 31px;
-	text-decoration: none;
 }
 
 @media (max-width: 768px) {
-	#buttonGetPassword {
-		width: 100%;
-		font-size: 18px;
-		margin-top: 5px;
-	}
-
-	#buttonClipboard {
+	input {
 		width: 100%;
 		font-size: 18px;
 		margin-top: 5px;
@@ -82,13 +71,7 @@ input {
 		text-align: center;
 	}
 
-	#buttonGetPassword {
-		width: 100%;
-		font-size: 18px;
-		margin-top: 5px;
-	}
-
-	#buttonClipboard {
+	input {
 		width: 100%;
 		font-size: 18px;
 		margin-top: 5px;
@@ -129,14 +112,7 @@ input {
 		font-size: 14px;
 	}
 
-	#buttonGetPassword {
-		width: 100%;
-		font-size: 14px;
-		margin-top: 5px;
-		padding: 5px;
-	}
-
-	#buttonClipboard {
+	input {
 		width: 100%;
 		font-size: 14px;
 		margin-top: 5px;
